# Parallel-High-Pass-Filter

./: CMakeLists.txt  README.md
src/: common_utilities.cpp
src/mpi/: mpi_implementation.cpp
src/openmp/: openmp_implementation.cpp
src/sequential/: sequential_implementation.cpp
